--- a/configs/mol_gen_sample.yaml
+++ b/configs/mol_gen_sample.yaml
@@ -37,4 +37,4 @@ final_weight: ???
 add_interval: ???
 add_method: ???
 schedule_method: ???
-constraint_matrices_json_path: ???
+constraint_matrix: ???
